# cmake-language-server

./: .gitattributes  .gitignore  LICENSE  README.md  codecov.yml  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: publish.yml  tests.yml
cmake_language_server/: __init__.py  api.py  server.py
src/cmake_language_server/: api.py  diagnostics.py  formatter.py  grammar.py  parser.py  server.py
tests/: conftest.py  test_api.py  test_fomatter.py  test_formatter.py  test_parser.py  test_server.py
tests/data/cmake/: CMakeLists.txt
