[tool.poetry]
name = "cmake-language-server"
version = "0.1.3"
description = "CMake LSP Implementation"
license = "MIT"
authors = ["regen"]
readme = "README.md"
repository = "https://github.com/regen100/cmake-language-server"
keywords = ["cmake", "completion", "vim", "lsp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
pygls = "^0.11"
pyparsing = "^2.4"
importlib-metadata = {version = "^4.8", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-datadir = "^1.3"
pytest-cov = "^2.11"
pysen = {version = "^0.9", extras = ["lint"]}

[tool.poetry.scripts]
cmake-format = "cmake_language_server.formatter:main"
cmake-language-server = "cmake_language_server.server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py36"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]
