[project]
name = "cmake-language-server"
dynamic = ["version"]
description = "CMake LSP Implementation"
authors = [
    {name = "Regen"},
]
dependencies = [
    "pygls>=1.1.1",
]
requires-python = ">=3.7.9,<3.13"
readme = "README.md"
license = {text = "MIT"}
keywords = ["cmake", "completion", "vim", "lsp"]
classifiers = [
    "Development Status :: 3 - Alpha", "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)", "Topic :: Utilities",
]

[project.urls]
repository = "https://github.com/regen100/cmake-language-server"

[project.scripts]
cmake-language-server = "cmake_language_server.server:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "cmake_language_server/version.py"
write_template = "__version__ = \"{}\"\n"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-datadir>=1.4.1",
    "pytest-cov>=4.0.0",
    "cmakelang>=0.6.13",
]
lint = [
    "mypy>=0.991",
    "flake8>=5.0.4",
    "black>=22.12.0",
    "isort>=5.11.4",
]

[tool.pdm.scripts]
test = "pytest --cov-report=term --cov-report=xml --cov=cmake_language_server -sv tests"

[tool.pdm.scripts.lint]
shell = """
    isort --check cmake_language_server tests
    black --check cmake_language_server tests
    flake8 cmake_language_server tests
    mypy cmake_language_server tests
"""
